# coordinator

./: .gitignore  .pre-commit-config.yaml  README.md
.claude/: settings.json
.github/workflows/: build-coordinator-mavlink.yaml  build-oak-still-capture.yaml  build-pod-camera.yaml  build-vio-estimator.yaml  build-vio-tracker.yaml  pre-commit.yaml  stack-smoke.yaml
analysis/: README.md  ardupilot_log.py  coordinator_captures.py  image-sharpness-vs-motion.ipynb  sitl-validation-experiments.md  vio-ekf-comparison.ipynb  vio-first-light-captures.ipynb  vio-input-alignment.ipynb  vio-online-offline-comparison.ipynb  vio-quality-experiments.md  vio-quality.ipynb  vio_ekf_compare.py
analysis/tools/: pull_estimator_rootfs.py  vio_param_sweep.py
containers/coordinator-mavlink/: Dockerfile  README.md  entrypoint.sh  router.py  (+2 more)
containers/vio-estimator/overlay/VINS-Fusion/vins_estimator/: CMakeLists.txt
containers/vio-estimator/overlay/VINS-Fusion/vins_estimator/src/: main_offline.cpp
containers/vio-estimator/overlay/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp
docs/: architecture.md  ardupilot-extnav-fusion.md  ardupilot-vio.md  bench-capture.md  bench-estimator.md  bench-tracker.md  calibration.md  coordinator-mavlink.md  coordinator-network.md  host-setup.md  pi-zero-bringup.md  pi-zero-host-setup.md  power-loss-filesystem.md  references.md  vins-stereo-only.md  vio-integration.md  vio-offline-replay.md
harness/: README.md  fake_fc.py  input_replayer.py  pose_replayer.py  test_input_replayer.py  test_router_stack.py
host/: README.md  one_time.sh
(+45 files in other folders)
